# sRow-motion

./: .gitignore  Cargo.toml  LICENSE  README.md
adapter/: Cargo.toml
adapter/src/: lib.rs
adapter/src/directory_path/: mod.rs  readonly_directory_path.rs  virtual_directory_path.rs  writable_directory_path.rs
adapter/src/file_path/: mod.rs  writable_file_path.rs
domain/: Cargo.toml
domain/src/: directory_data_transfer_service.rs  lib.rs
domain/src/config/: mod.rs  source_directory_path.rs  weekday.rs
domain/src/config/destination_directory_path/: mod.rs  path_template_renderer.rs
domain/src/config_builder/: arg_config_builder.rs  json_config_builder.rs  mod.rs
infra/: Cargo.toml
infra/src/: file_system.rs
shared/: Cargo.toml
shared/src/: error.rs
src/: main.rs
