[package]
name = "domain"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["sRow motion Contributors"]

[dependencies]
shared = { workspace = true }
adapter = { path="../adapter" }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = { workspace = true }